--- a/userAdd.html
+++ b/userAdd.html
@@ -89,9 +89,9 @@
                             <!-- /tile header -->
 
                             <!-- tile body -->
-                            <div class="tile-body">
+                            <div class="tile-body" id="userAddDiv">
 
-                                <form class="form-horizontal" role="form" parsley-validate onsubmit="return addUser()">
+                                <form class="form-horizontal" role="form" parsley-validate id="userForm" method="post" enctype="multipart/form-data">
 
                                     <div class="form-group">
                                         <label for="userName" class="col-sm-4 control-label">用户姓名</label>
@@ -147,8 +147,8 @@
                                     <div class="form-group">
                                         <label for="selectSex" class="col-sm-4 control-label">性别</label>
                                         <div class="col-sm-8" id="selectSex">
-                                            <select v-model="params.userSex" class="chosen-select chosen-transparent form-control" id="userSex" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
-                                                <option value="">请选择</option>
+                                            <select v-model="params.userSex" class="form-control" id="userSex" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
+                                                <option value="-1">请选择</option>
                                                 <option value="0">男</option>
                                                 <option value="1">女</option>
                                             </select>
@@ -158,8 +158,8 @@
                                     <div class="form-group">
                                         <label for="selectState" class="col-sm-4 control-label">状态</label>
                                         <div class="col-sm-8" id="selectState">
-                                            <select v-model="params.userState" class="chosen-select chosen-transparent form-control" id="userState" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
-                                                <option value="">请选择</option>
+                                            <select v-model="params.userState" class="form-control" id="userState" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
+                                                <option value="-1">请选择</option>
                                                 <option value="0">禁用</option>
                                                 <option value="1">启用</option>
                                             </select>
@@ -169,8 +169,8 @@
                                     <div class="form-group">
                                         <label for="selectPermissions" class="col-sm-4 control-label">权限</label>
                                         <div class="col-sm-8" id="selectPermissions">
-                                            <select v-model="params.userPermissions" class="chosen-select chosen-transparent form-control" id="userPermissions" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
-                                                <option value="">请选择</option>
+                                            <select v-model="params.userPermissions" class="form-control" id="userPermissions" parsley-trigger="change" parsley-required="true" parsley-error-container="#selectbox">
+                                                <option value="-1">请选择</option>
                                                 <option value="0">管理员</option>
                                                 <option value="1">用户</option>
                                             </select>
@@ -180,14 +180,14 @@
                                     <div class="form-group">
                                         <label for="userHead" class="col-sm-4 control-label">用户头像</label>
                                         <div class="col-sm-8">
-                                            <input type="file" class="form-control" id="userHead">
+                                            <input type="file" class="form-control" id="userHead" name="userHead">
                                         </div>
                                     </div>
 
 
                                     <div class="form-group form-footer">
                                         <div class="col-sm-offset-4 col-sm-8">
-                                            <button type="submit" class="btn btn-primary">保存</button>
+                                            <button type="button" class="btn btn-primary" @click="addUser">保存</button>
                                             <button type="reset" class="btn btn-default">重置</button>
                                         </div>
                                     </div>
@@ -251,23 +251,52 @@
                 userEmail:"",
                 userAge:null,
                 userPhone:"",
-                userSex:null,
-                userState:null,
-                userPermissions:null
+                userSex:-1,
+                userState:-1,
+                userPermissions:-1,
+                userHead:null
             },
         },
+        /*mounted:{
+
+        },*/
         methods:{
+            /**
+             * 添加用户信息
+             * 先上传用户头像，上传头像成功后，获取上传成功图片的 名字 和 图片后缀
+             * 然后再添加用户详细信息
+             */
             addUser : function () {
-                /*$.ajax({
-                    url:"http://localhost:9000/users/addUser",
-                    type:"POST",
-                    dataType:"json",
-                    contentType: 'application/json; charset=UTF-8',
-                    data: JSON.stringify(vm.params),
+                $.ajax({
+                    url:"http://localhost:9000/upload/userUpload",
+                    type:"POST", //请求方式
+                    dataType:"json", //前端发送数据的格式
+                    cache:false, //关闭缓存
+                    processData: false, //默认情况下，processData 的值是 true，其代表以对象的形式上传的数据都会被转换为字符串的形式上传。而当上传文件的时候，则不需要把其转换为字符串，因此要改成false
+                    contentType: false, //上传文件时改为 false
+                    data:new FormData($("#userForm")[0]), //用 Ajax 上传文件，需要使用 FormData 对象来作为数据
                     success:function (data) {
                         console.log(data);
+                        if(data.code === 0 ){
+                            //绑定用户图片名称
+                            vm.params.userHead = "http://localhost:9000/img/users/" + data.fileName + data.extendedName;
+                            $.ajax({
+                                url:"http://localhost:9000/users/addUser",
+                                type:"POST",
+                                dataType:"json",
+                                contentType: 'application/json; charset=UTF-8',
+                                data: JSON.stringify(vm.params),
+                                success:function (data) {
+                                    console.log(data);
+                                    if (data.code === 0){
+                                        alert(data.msg);
+                                        window.location.href="userQuery.html";
+                                    }
+                                }
+                            });
+                        }
                     }
-                });*/
+                });
             }
         }
     });
